Revamp index.html with new layout and scripts

--- a/index.html
+++ b/index.html
@@ -3,279 +3,259 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Trustiva Market | AI-Powered Website Marketplace</title>
-<meta name="description" content="Trustiva Market is an AI-enhanced marketplace to buy and sell verified websites securely with escrow protection and smart valuation insights.">
+<title>Interstellar Web Experience</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;800&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/EffectComposer.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/RenderPass.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/UnrealBloomPass.js"></script>
 
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:'Inter',sans-serif;
-}
-
+*{margin:0;padding:0;box-sizing:border-box}
 body{
-  background:#05070d;
+  background:#0B0F1A;
   color:white;
+  font-family:'Inter',sans-serif;
   overflow-x:hidden;
 }
-
-/* NAVBAR */
-nav{
+canvas{
   position:fixed;
-  width:100%;
-  padding:20px 60px;
+  top:0;
+  left:0;
+  z-index:-1;
+}
+section{
+  min-height:100vh;
   display:flex;
-  justify-content:space-between;
-  align-items:center;
-  background:rgba(0,0,0,0.6);
-  backdrop-filter:blur(12px);
-  z-index:1000;
-}
-
-nav h2{
-  color:#00ffff;
-}
-
-nav ul{
-  display:flex;
-  list-style:none;
-  gap:30px;
-}
-
-nav a{
-  color:#ccc;
-  text-decoration:none;
-  transition:0.3s;
-}
-
-nav a:hover{
-  color:#00ffff;
-}
-
-/* HERO */
-.hero{
-  height:100vh;
-  background:url("hero.jpg") center/cover no-repeat;
-  display:flex;
-  align-items:center;
   justify-content:center;
+  align-items:center;
   text-align:center;
-  position:relative;
-  animation:zoomHero 20s ease-in-out infinite alternate;
+  padding:40px;
 }
-
-.hero::before{
-  content:"";
-  position:absolute;
-  width:100%;
-  height:100%;
-  background:linear-gradient(to bottom, rgba(0,0,0,0.8), rgba(5,7,13,0.95));
+h1,h2{
+  font-family:'Orbitron';
 }
-
-.hero-content{
-  position:relative;
-  max-width:800px;
-  padding:20px;
-  animation:fadeUp 1.2s ease forwards;
-}
-
 .hero h1{
-  font-size:52px;
-  font-weight:700;
-  background:linear-gradient(90deg,#00ffff,#a855f7);
+  font-size:60px;
+  background:linear-gradient(90deg,#00F5FF,#A855F7);
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
-  margin-bottom:20px;
 }
-
 .hero p{
+  margin-top:20px;
   color:#ccc;
-  font-size:18px;
-  margin-bottom:30px;
 }
-
 .btn{
-  padding:14px 30px;
-  border-radius:30px;
-  text-decoration:none;
-  font-weight:600;
-  margin:10px;
-  display:inline-block;
-  transition:0.3s;
-}
-
-.primary{
-  background:linear-gradient(90deg,#00ffff,#a855f7);
+  margin-top:40px;
+  padding:15px 40px;
+  border-radius:40px;
+  background:linear-gradient(90deg,#00F5FF,#A855F7);
   color:black;
-  box-shadow:0 0 25px #00ffff50;
+  font-weight:700;
+  cursor:pointer;
+  transition:.3s;
 }
-
-.primary:hover{
-  transform:translateY(-4px);
-  box-shadow:0 0 35px #00ffff;
+.btn:hover{
+  transform:scale(1.1);
+  box-shadow:0 0 40px #00F5FF;
 }
-
-.secondary{
-  border:1px solid #00ffff;
-  color:#00ffff;
-}
-
-.secondary:hover{
-  background:#00ffff;
-  color:black;
-}
-
-/* SECTIONS */
-section{
-  padding:100px 40px;
-  text-align:center;
-}
-
-.section-title{
-  font-size:36px;
-  margin-bottom:60px;
-}
-
-.card-grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-  gap:30px;
-}
-
-.card{
-  background:rgba(255,255,255,0.05);
-  backdrop-filter:blur(12px);
-  padding:30px;
-  border-radius:15px;
-  transition:0.4s;
-}
-
-.card:hover{
-  transform:translateY(-8px);
-  box-shadow:0 0 25px #00ffff40;
-}
-
-.card h3{
-  margin-bottom:15px;
-  color:#00ffff;
-}
-
-.card p{
-  color:#aaa;
-}
-
-/* CTA */
-.cta{
-  padding:80px 20px;
-  background:linear-gradient(90deg,#00ffff20,#a855f720);
-}
-
-.cta h2{
-  font-size:32px;
-  margin-bottom:20px;
-}
-
-/* FOOTER */
-footer{
-  padding:40px;
-  background:#0a0f1a;
-  color:#777;
-  text-align:center;
-}
-
-/* ANIMATIONS */
-@keyframes zoomHero{
-  from{background-size:100%;}
-  to{background-size:110%;}
-}
-
-@keyframes fadeUp{
-  from{opacity:0; transform:translateY(30px);}
-  to{opacity:1; transform:translateY(0);}
-}
-
-/* RESPONSIVE */
-@media(max-width:768px){
-  nav{
-    padding:15px 20px;
-  }
-  nav ul{
-    display:none;
-  }
-  .hero h1{
-    font-size:34px;
-  }
+.dark{
+  background:rgba(0,0,0,0.5);
+  backdrop-filter:blur(8px);
 }
 </style>
 </head>
-
 <body>
 
-<nav>
-  <h2>Trustiva</h2>
-  <ul>
-    <li><a href="#">Listings</a></li>
-    <li><a href="#">How It Works</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-</nav>
+<canvas id="space"></canvas>
 
 <section class="hero">
-  <div class="hero-content">
-    <h1>Buy & Sell Websites — Smarter with AI</h1>
-    <p>
-    Trustiva Market is an AI-enhanced digital asset marketplace helping entrepreneurs
-    trade verified websites with smart valuation insights and protected payments.
-    </p>
-    <a href="#" class="btn primary">Browse AI-Verified Listings</a>
-    <a href="#" class="btn secondary">List Your Website Free</a>
+  <div>
+    <h1>Your Business Deserves the Universe</h1>
+    <p>We build high-performance websites that dominate digital space.</p>
+    <div class="btn">🚀 Launch Mission</div>
   </div>
+</section>
+
+<section class="dark">
+  <h2>Lost in Digital Space?</h2>
 </section>
 
 <section>
-  <h2 class="section-title">How AI Enhances Trustiva</h2>
-  <div class="card-grid">
-    <div class="card">
-      <h3>AI Valuation Insights</h3>
-      <p>Traffic patterns and revenue consistency are analyzed to suggest fair pricing benchmarks.</p>
-    </div>
-    <div class="card">
-      <h3>Risk Signal Detection</h3>
-      <p>Automated checks assist in identifying suspicious activity or unusual performance spikes.</p>
-    </div>
-    <div class="card">
-      <h3>Smart Buyer Matching</h3>
-      <p>Personalized recommendations based on your niche, budget, and acquisition goals.</p>
-    </div>
-    <div class="card">
-      <h3>Guided Secure Transfers</h3>
-      <p>Structured workflow ensures smooth domain and hosting ownership transfer.</p>
-    </div>
-  </div>
+  <h2>Mission Control Activated</h2>
+</section>
+
+<section class="dark">
+  <h2>Galaxy of Successful Launches</h2>
 </section>
 
 <section>
-  <h2 class="section-title">Why Founders Choose Trustiva</h2>
-  <div class="card-grid">
-    <div class="card">✔ AI-Assisted Verification</div>
-    <div class="card">✔ Escrow-Protected Payments</div>
-    <div class="card">✔ Transparent Low Fees</div>
-    <div class="card">✔ Fast Ownership Transfers</div>
-  </div>
+  <h2>Ready For Liftoff?</h2>
 </section>
 
-<section class="cta">
-  <h2>Let AI Guide Your Next Digital Acquisition</h2>
-  <a href="#" class="btn primary">Get Started Today</a>
-</section>
+<script>
+gsap.registerPlugin(ScrollTrigger);
 
-<footer>
-  © 2026 Trustiva Market. All Rights Reserved.<br>
-  AI-Enhanced Digital Asset Marketplace
-</footer>
+const canvas = document.getElementById("space");
+const scene = new THREE.Scene();
+scene.fog = new THREE.FogExp2(0x0B0F1A, 0.002);
+
+const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 3000);
+const renderer = new THREE.WebGLRenderer({canvas, alpha:true});
+renderer.setSize(window.innerWidth, window.innerHeight);
+
+// Post Processing Bloom
+const composer = new THREE.EffectComposer(renderer);
+composer.addPass(new THREE.RenderPass(scene, camera));
+const bloomPass = new THREE.UnrealBloomPass(
+  new THREE.Vector2(window.innerWidth, window.innerHeight),
+  1.2,
+  0.4,
+  0.85
+);
+composer.addPass(bloomPass);
+
+// STARFIELD
+const starsGeo = new THREE.BufferGeometry();
+const starVertices = [];
+for (let i = 0; i < 25000; i++) {
+  starVertices.push(
+    THREE.MathUtils.randFloatSpread(4000),
+    THREE.MathUtils.randFloatSpread(4000),
+    THREE.MathUtils.randFloatSpread(4000)
+  );
+}
+starsGeo.setAttribute("position", new THREE.Float32BufferAttribute(starVertices, 3));
+const stars = new THREE.Points(starsGeo, new THREE.PointsMaterial({color:0xffffff}));
+scene.add(stars);
+
+// ROCKET
+const rocket = new THREE.Group();
+
+const body = new THREE.Mesh(
+  new THREE.CylinderGeometry(0.5,0.5,3,32),
+  new THREE.MeshStandardMaterial({color:0xffffff})
+);
+rocket.add(body);
+
+const nose = new THREE.Mesh(
+  new THREE.ConeGeometry(0.5,1,32),
+  new THREE.MeshStandardMaterial({color:0xff0000})
+);
+nose.position.y = 2;
+rocket.add(nose);
+
+const engine = new THREE.Mesh(
+  new THREE.ConeGeometry(0.3,1,32),
+  new THREE.MeshBasicMaterial({color:0x00ffff})
+);
+engine.position.y = -2;
+engine.rotation.x = Math.PI;
+rocket.add(engine);
+
+// Exhaust Particles
+const exhaustGeo = new THREE.BufferGeometry();
+const exhaustVertices = [];
+for (let i = 0; i < 2000; i++) {
+  exhaustVertices.push(
+    (Math.random()-0.5)*0.5,
+    -2 - Math.random()*5,
+    (Math.random()-0.5)*0.5
+  );
+}
+exhaustGeo.setAttribute("position", new THREE.Float32BufferAttribute(exhaustVertices,3));
+const exhaust = new THREE.Points(exhaustGeo, new THREE.PointsMaterial({
+  color:0x00ffff,
+  size:0.05
+}));
+rocket.add(exhaust);
+
+scene.add(rocket);
+
+// ORBITING PLANETS
+const planets=[];
+for(let i=0;i<4;i++){
+  const planet=new THREE.Mesh(
+    new THREE.SphereGeometry(0.6,32,32),
+    new THREE.MeshStandardMaterial({color:0xA855F7})
+  );
+  planets.push(planet);
+  scene.add(planet);
+}
+
+const light = new THREE.PointLight(0xffffff,1);
+light.position.set(10,10,10);
+scene.add(light);
+
+camera.position.set(0,0,15);
+
+// Mouse Parallax
+document.addEventListener("mousemove",(e)=>{
+  const x = (e.clientX/window.innerWidth - 0.5) * 2;
+  const y = (e.clientY/window.innerHeight - 0.5) * 2;
+  gsap.to(rocket.rotation,{
+    x:y*0.3,
+    y:x*0.5,
+    duration:0.5
+  });
+});
+
+// Scroll Cinematic Camera
+gsap.to(camera.position,{
+  z:-100,
+  y:20,
+  scrollTrigger:{
+    trigger:"body",
+    start:"top top",
+    end:"bottom bottom",
+    scrub:true
+  }
+});
+
+// Rocket Launch
+document.querySelector(".btn").addEventListener("click",()=>{
+  gsap.to(rocket.position,{
+    y:120,
+    duration:4,
+    ease:"power4.in"
+  });
+});
+
+// Engine Pulse
+gsap.to(engine.scale,{
+  y:2,
+  repeat:-1,
+  yoyo:true,
+  duration:0.2
+});
+
+function animate(){
+  requestAnimationFrame(animate);
+  stars.rotation.y += 0.0008;
+  rocket.rotation.y += 0.01;
+  exhaust.rotation.y += 0.02;
+
+  planets.forEach((p,i)=>{
+    p.position.x=8*Math.cos(Date.now()*0.001+i);
+    p.position.z=8*Math.sin(Date.now()*0.001+i);
+  });
+
+  composer.render();
+}
+animate();
+
+window.addEventListener("resize",()=>{
+  camera.aspect = window.innerWidth/window.innerHeight;
+  camera.updateProjectionMatrix();
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  composer.setSize(window.innerWidth, window.innerHeight);
+});
+</script>
 
 </body>
 </html>
