--- a/index.html
+++ b/index.html
@@ -4,66 +4,169 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Trustiva Market</title>
+<title>Interstellar Web Experience</title>
 
 <style>
-body {
-  margin: 0;
-  overflow-x: hidden;
-  background: #0B0F1A;
-  font-family: Arial, sans-serif;
-  color: white;
-  text-align: center;
+*{margin:0;padding:0;box-sizing:border-box}
+
+body{
+  font-family:system-ui,-apple-system,sans-serif;
+  background:#0B0F1A;
+  color:white;
+  overflow-x:hidden;
+  scroll-behavior:smooth;
 }
 
-canvas {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -1;
+canvas{
+  position:fixed;
+  top:0;
+  left:0;
+  z-index:-1;
 }
 
-.hero {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 20px;
+/* HERO */
+
+.hero{
+  height:100vh;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  padding:20px;
 }
 
-h1 {
-  font-size: 3rem;
-  background: linear-gradient(90deg, #00f0ff, #a855f7);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+h1{
+  font-size:clamp(2rem,6vw,4rem);
+  background:linear-gradient(90deg,#00f0ff,#a855f7);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  margin-bottom:20px;
+  letter-spacing:1px;
 }
 
-p {
-  opacity: 0.7;
-  margin-bottom: 40px;
+.hero p{
+  max-width:600px;
+  opacity:.75;
+  margin-bottom:40px;
+  font-size:1.1rem;
 }
 
-button {
-  padding: 18px 50px;
-  border-radius: 40px;
-  border: none;
-  font-size: 18px;
-  background: linear-gradient(90deg, #00f0ff, #a855f7);
-  color: white;
-  cursor: pointer;
-  box-shadow: 0 0 20px #00f0ff;
-  transition: 0.3s;
+.btn{
+  padding:18px 60px;
+  border-radius:50px;
+  background:linear-gradient(90deg,#00f0ff,#a855f7);
+  border:none;
+  color:white;
+  font-size:18px;
+  cursor:pointer;
+  box-shadow:0 0 25px rgba(0,240,255,0.6);
+  transition:.3s ease;
 }
 
-button:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 40px #a855f7;
+.btn:hover{
+  transform:scale(1.05);
+  box-shadow:0 0 50px rgba(168,85,247,0.8);
 }
 
-.rocket {
-  font-size: 60px;
-  margin-bottom: 20px;
-  transition: transform 1s ease-in-out;
+.rocket{
+  font-size:70px;
+  margin-bottom:25px;
+  transition:transform 1.2s ease;
+  filter:drop-shadow(0 0 20px #00f0ff);
+}
+
+/* SECTIONS */
+
+.section{
+  min-height:100vh;
+  padding:120px 20px;
+  text-align:center;
+  backdrop-filter:blur(4px);
+}
+
+.section h2{
+  font-size:2.5rem;
+  margin-bottom:20px;
+  background:linear-gradient(90deg,#00f0ff,#a855f7);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+}
+
+.section p{
+  max-width:700px;
+  margin:auto;
+  opacity:.75;
+  font-size:1.05rem;
+}
+
+/* PLANETS */
+
+.planets{
+  display:flex;
+  justify-content:center;
+  gap:40px;
+  flex-wrap:wrap;
+  margin-top:60px;
+}
+
+.planet{
+  width:120px;
+  height:120px;
+  border-radius:50%;
+  background:radial-gradient(circle at 30% 30%,#00f0ff,#4c1d95);
+  animation:rotate 10s linear infinite;
+  box-shadow:0 0 30px rgba(0,240,255,0.7);
+  transition:.4s;
+}
+
+.planet:hover{
+  transform:scale(1.2);
+  box-shadow:0 0 70px rgba(168,85,247,0.9);
+}
+
+@keyframes rotate{
+  from{transform:rotate(0deg)}
+  to{transform:rotate(360deg)}
+}
+
+/* PRICING */
+
+.pricing{
+  display:flex;
+  justify-content:center;
+  gap:40px;
+  flex-wrap:wrap;
+  margin-top:60px;
+}
+
+.card{
+  background:rgba(255,255,255,0.05);
+  padding:40px;
+  border-radius:20px;
+  width:280px;
+  backdrop-filter:blur(15px);
+  border:1px solid rgba(255,255,255,0.1);
+  transition:.4s;
+}
+
+.card:hover{
+  transform:translateY(-15px);
+  box-shadow:0 0 40px rgba(0,240,255,0.7);
+}
+
+.testimonial{
+  font-style:italic;
+  margin-top:40px;
+  opacity:.85;
+  font-size:1.1rem;
+}
+
+.countdown{
+  font-size:3rem;
+  margin:30px 0;
+  color:#00f0ff;
+  font-weight:bold;
 }
 </style>
 </head>
@@ -72,56 +175,116 @@ button:hover {
 
 <canvas id="stars"></canvas>
 
+<!-- HERO -->
 <section class="hero">
   <div class="rocket" id="rocket">🚀</div>
   <h1>Your Business Deserves the Universe</h1>
-  <p>We build high-performance websites that dominate digital space.</p>
-  <button onclick="launch()">Launch Mission</button>
+  <p>We Build High-Performance Websites That Dominate Digital Space.</p>
+  <button class="btn" onclick="launch()">Launch Mission</button>
+</section>
+
+<!-- PROBLEM -->
+<section class="section">
+  <h2>Is Your Business Floating Without Direction?</h2>
+  <p>Slow websites. Weak design. Poor SEO. Most businesses drift unseen in digital space.</p>
+</section>
+
+<!-- MISSION CONTROL -->
+<section class="section">
+  <h2>Mission Control</h2>
+  <p>Frontend. Backend. E-Commerce. SEO. Everything engineered with interstellar precision.</p>
+  <div class="planets">
+    <div class="planet"></div>
+    <div class="planet"></div>
+    <div class="planet"></div>
+    <div class="planet"></div>
+  </div>
+</section>
+
+<!-- PRICING -->
+<section class="section">
+  <h2>Choose Your Rocket</h2>
+  <div class="pricing">
+    <div class="card">
+      <h3>Starter Rocket</h3>
+      <p>Perfect for new businesses.</p>
+    </div>
+    <div class="card">
+      <h3>Growth Rocket</h3>
+      <p>For scaling brands.</p>
+    </div>
+    <div class="card">
+      <h3>Enterprise Rocket</h3>
+      <p>High-performance digital dominance.</p>
+    </div>
+  </div>
+</section>
+
+<!-- TESTIMONIAL -->
+<section class="section">
+  <h2>Signals From Other Planets</h2>
+  <p class="testimonial">“They transformed our business into a digital powerhouse.”</p>
+</section>
+
+<!-- FINAL CTA -->
+<section class="section">
+  <h2>Ready to Launch?</h2>
+  <div class="countdown" id="countdown">3</div>
+  <button class="btn" onclick="startCountdown()">Start the Mission</button>
 </section>
 
 <script>
-const canvas = document.getElementById("stars");
-const ctx = canvas.getContext("2d");
+// STARFIELD
+const canvas=document.getElementById("stars");
+const ctx=canvas.getContext("2d");
+canvas.width=window.innerWidth;
+canvas.height=window.innerHeight;
 
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
-
-let stars = [];
-
-for (let i = 0; i < 150; i++) {
+let stars=[];
+for(let i=0;i<180;i++){
   stars.push({
-    x: Math.random() * canvas.width,
-    y: Math.random() * canvas.height,
-    size: Math.random() * 2,
-    speed: Math.random() * 0.5
+    x:Math.random()*canvas.width,
+    y:Math.random()*canvas.height,
+    size:Math.random()*2,
+    speed:Math.random()*0.6
   });
 }
 
-function drawStars() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-  ctx.fillStyle = "white";
-
-  stars.forEach(star => {
+function animate(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  ctx.fillStyle="white";
+  stars.forEach(s=>{
     ctx.beginPath();
-    ctx.arc(star.x, star.y, star.size, 0, Math.PI * 2);
+    ctx.arc(s.x,s.y,s.size,0,Math.PI*2);
     ctx.fill();
-
-    star.y += star.speed;
-
-    if (star.y > canvas.height) {
-      star.y = 0;
-      star.x = Math.random() * canvas.width;
+    s.y+=s.speed;
+    if(s.y>canvas.height){
+      s.y=0;
+      s.x=Math.random()*canvas.width;
     }
   });
+  requestAnimationFrame(animate);
+}
+animate();
 
-  requestAnimationFrame(drawStars);
+// ROCKET LAUNCH
+function launch(){
+  document.getElementById("rocket").style.transform="translateY(-600px)";
 }
 
-drawStars();
-
-function launch() {
-  const rocket = document.getElementById("rocket");
-  rocket.style.transform = "translateY(-400px)";
+// COUNTDOWN
+function startCountdown(){
+  let count=3;
+  const el=document.getElementById("countdown");
+  const interval=setInterval(()=>{
+    count--;
+    if(count===0){
+      el.innerText="🚀";
+      clearInterval(interval);
+    }else{
+      el.innerText=count;
+    }
+  },1000);
 }
 </script>
 
