--- a/index.html
+++ b/index.html
@@ -1,291 +1,234 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Interstellar Web Experience</title>
+<title>Trustiva</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 
-body{
+html,body{
+  height:100%;
   font-family:system-ui,-apple-system,sans-serif;
-  background:#0B0F1A;
-  color:white;
+  background:black;
   overflow-x:hidden;
   scroll-behavior:smooth;
 }
 
-canvas{
-  position:fixed;
-  top:0;
-  left:0;
+/* ===== Base Section ===== */
+
+.section{
+  position:relative;
+  height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  text-align:center;
+  overflow:hidden;
+}
+
+/* ===== Optimized Video ===== */
+
+.video-bg{
+  position:absolute;
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  z-index:-2;
+  transform:translateZ(0);
+}
+
+/* Overlay */
+.overlay{
+  position:absolute;
+  inset:0;
+  background:rgba(0,0,0,0.6);
   z-index:-1;
 }
 
-/* HERO */
+/* ===== Text Animation ===== */
 
-.hero{
-  height:100vh;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  text-align:center;
-  padding:20px;
+.reveal{
+  opacity:0;
+  transform:translateY(30px);
+  transition:opacity 0.9s ease, transform 0.9s ease;
 }
 
-h1{
-  font-size:clamp(2rem,6vw,4rem);
+.reveal.show{
+  opacity:1;
+  transform:translateY(0);
+}
+
+h1,h2{
   background:linear-gradient(90deg,#00f0ff,#a855f7);
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
-  margin-bottom:20px;
-  letter-spacing:1px;
+  text-shadow:0 0 25px #00f0ff;
 }
 
-.hero p{
-  max-width:600px;
-  opacity:.75;
-  margin-bottom:40px;
-  font-size:1.1rem;
+h1{font-size:clamp(32px,5vw,60px);}
+h2{font-size:clamp(28px,4vw,45px);}
+
+p{
+  margin-top:20px;
+  color:#ccc;
 }
 
-.btn{
-  padding:18px 60px;
-  border-radius:50px;
-  background:linear-gradient(90deg,#00f0ff,#a855f7);
+button{
+  margin-top:40px;
+  padding:15px 50px;
   border:none;
+  border-radius:50px;
+  font-size:16px;
+  background:linear-gradient(90deg,#00f0ff,#a855f7);
   color:white;
-  font-size:18px;
   cursor:pointer;
-  box-shadow:0 0 25px rgba(0,240,255,0.6);
-  transition:.3s ease;
+  transition:transform .3s ease;
 }
 
-.btn:hover{
+button:hover{
   transform:scale(1.05);
-  box-shadow:0 0 50px rgba(168,85,247,0.8);
 }
+
+/* ===== Parallax Layer ===== */
+
+.parallax{
+  transform:translateZ(0);
+  will-change:transform;
+}
+
+/* ===== Rocket ===== */
 
 .rocket{
-  font-size:70px;
-  margin-bottom:25px;
-  transition:transform 1.2s ease;
-  filter:drop-shadow(0 0 20px #00f0ff);
+  position:absolute;
+  bottom:60px;
+  width:180px;
+  transition:transform 2.5s cubic-bezier(.4,0,.2,1);
+  will-change:transform;
 }
 
-/* SECTIONS */
-
-.section{
-  min-height:100vh;
-  padding:120px 20px;
-  text-align:center;
-  backdrop-filter:blur(4px);
+.launch{
+  transform:translateY(-140vh);
 }
 
-.section h2{
-  font-size:2.5rem;
-  margin-bottom:20px;
-  background:linear-gradient(90deg,#00f0ff,#a855f7);
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
+/* ===== Black Section ===== */
+
+.black{
+  background:black;
 }
 
-.section p{
-  max-width:700px;
-  margin:auto;
-  opacity:.75;
-  font-size:1.05rem;
+/* ===== Smooth Fade Between Sections ===== */
+
+.fade-section{
+  opacity:0;
+  transform:translateY(40px);
+  transition:all 1s ease;
 }
 
-/* PLANETS */
-
-.planets{
-  display:flex;
-  justify-content:center;
-  gap:40px;
-  flex-wrap:wrap;
-  margin-top:60px;
+.fade-section.visible{
+  opacity:1;
+  transform:translateY(0);
 }
 
-.planet{
-  width:120px;
-  height:120px;
-  border-radius:50%;
-  background:radial-gradient(circle at 30% 30%,#00f0ff,#4c1d95);
-  animation:rotate 10s linear infinite;
-  box-shadow:0 0 30px rgba(0,240,255,0.7);
-  transition:.4s;
-}
-
-.planet:hover{
-  transform:scale(1.2);
-  box-shadow:0 0 70px rgba(168,85,247,0.9);
-}
-
-@keyframes rotate{
-  from{transform:rotate(0deg)}
-  to{transform:rotate(360deg)}
-}
-
-/* PRICING */
-
-.pricing{
-  display:flex;
-  justify-content:center;
-  gap:40px;
-  flex-wrap:wrap;
-  margin-top:60px;
-}
-
-.card{
-  background:rgba(255,255,255,0.05);
-  padding:40px;
-  border-radius:20px;
-  width:280px;
-  backdrop-filter:blur(15px);
-  border:1px solid rgba(255,255,255,0.1);
-  transition:.4s;
-}
-
-.card:hover{
-  transform:translateY(-15px);
-  box-shadow:0 0 40px rgba(0,240,255,0.7);
-}
-
-.testimonial{
-  font-style:italic;
-  margin-top:40px;
-  opacity:.85;
-  font-size:1.1rem;
-}
-
-.countdown{
-  font-size:3rem;
-  margin:30px 0;
-  color:#00f0ff;
-  font-weight:bold;
+@media(max-width:768px){
+  .rocket{width:130px}
 }
 </style>
 </head>
 
 <body>
 
-<canvas id="stars"></canvas>
-
 <!-- HERO -->
-<section class="hero">
-  <div class="rocket" id="rocket">🚀</div>
-  <h1>Your Business Deserves the Universe</h1>
-  <p>We Build High-Performance Websites That Dominate Digital Space.</p>
-  <button class="btn" onclick="launch()">Launch Mission</button>
+<section class="section">
+
+  <video class="video-bg parallax" autoplay muted loop playsinline>
+    <source src="space-video.mp4" type="video/mp4">
+  </video>
+
+  <div class="overlay"></div>
+
+  <div class="reveal" id="heroText">
+    <h1>Your Business Deserves The Universe</h1>
+    <p>Speed. Power. Precision.</p>
+    <button onclick="scrollNext()">Enter Mission</button>
+  </div>
+
+  <img src="rocket.png" class="rocket" id="rocket">
+
 </section>
 
-<!-- PROBLEM -->
-<section class="section">
-  <h2>Is Your Business Floating Without Direction?</h2>
-  <p>Slow websites. Weak design. Poor SEO. Most businesses drift unseen in digital space.</p>
-</section>
-
-<!-- MISSION CONTROL -->
-<section class="section">
-  <h2>Mission Control</h2>
-  <p>Frontend. Backend. E-Commerce. SEO. Everything engineered with interstellar precision.</p>
-  <div class="planets">
-    <div class="planet"></div>
-    <div class="planet"></div>
-    <div class="planet"></div>
-    <div class="planet"></div>
+<!-- DRAMATIC TEXT -->
+<section class="section black">
+  <div class="fade-section">
+    <h2>Not Just A Website.</h2>
   </div>
 </section>
 
-<!-- PRICING -->
-<section class="section">
-  <h2>Choose Your Rocket</h2>
-  <div class="pricing">
-    <div class="card">
-      <h3>Starter Rocket</h3>
-      <p>Perfect for new businesses.</p>
-    </div>
-    <div class="card">
-      <h3>Growth Rocket</h3>
-      <p>For scaling brands.</p>
-    </div>
-    <div class="card">
-      <h3>Enterprise Rocket</h3>
-      <p>High-performance digital dominance.</p>
-    </div>
+<section class="section black">
+  <div class="fade-section">
+    <h2>A Digital Launchpad.</h2>
   </div>
 </section>
 
-<!-- TESTIMONIAL -->
-<section class="section">
-  <h2>Signals From Other Planets</h2>
-  <p class="testimonial">“They transformed our business into a digital powerhouse.”</p>
-</section>
-
-<!-- FINAL CTA -->
-<section class="section">
-  <h2>Ready to Launch?</h2>
-  <div class="countdown" id="countdown">3</div>
-  <button class="btn" onclick="startCountdown()">Start the Mission</button>
+<!-- COUNTDOWN -->
+<section class="section black">
+  <div>
+    <div id="count" style="font-size:80px;">3</div>
+    <button onclick="launch()">Launch</button>
+  </div>
 </section>
 
 <script>
-// STARFIELD
-const canvas=document.getElementById("stars");
-const ctx=canvas.getContext("2d");
-canvas.width=window.innerWidth;
-canvas.height=window.innerHeight;
 
-let stars=[];
-for(let i=0;i<180;i++){
-  stars.push({
-    x:Math.random()*canvas.width,
-    y:Math.random()*canvas.height,
-    size:Math.random()*2,
-    speed:Math.random()*0.6
-  });
+/* Reveal Hero Immediately */
+document.getElementById("heroText").classList.add("show");
+
+/* Smooth Scroll */
+function scrollNext(){
+  window.scrollBy({top:window.innerHeight,behavior:"smooth"});
 }
 
-function animate(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  ctx.fillStyle="white";
-  stars.forEach(s=>{
-    ctx.beginPath();
-    ctx.arc(s.x,s.y,s.size,0,Math.PI*2);
-    ctx.fill();
-    s.y+=s.speed;
-    if(s.y>canvas.height){
-      s.y=0;
-      s.x=Math.random()*canvas.width;
-    }
-  });
-  requestAnimationFrame(animate);
-}
-animate();
-
-// ROCKET LAUNCH
+/* Launch */
 function launch(){
-  document.getElementById("rocket").style.transform="translateY(-600px)";
-}
-
-// COUNTDOWN
-function startCountdown(){
   let count=3;
-  const el=document.getElementById("countdown");
-  const interval=setInterval(()=>{
+  const el=document.getElementById("count");
+  const rocket=document.getElementById("rocket");
+
+  let interval=setInterval(()=>{
     count--;
     if(count===0){
       el.innerText="🚀";
+      rocket.classList.add("launch");
       clearInterval(interval);
     }else{
       el.innerText=count;
     }
   },1000);
 }
+
+/* Section Fade Observer */
+const observer=new IntersectionObserver(entries=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){
+      entry.target.classList.add("visible");
+    }
+  });
+},{threshold:0.4});
+
+document.querySelectorAll(".fade-section").forEach(el=>{
+  observer.observe(el);
+});
+
+/* Lightweight Parallax */
+document.addEventListener("mousemove",(e)=>{
+  const video=document.querySelector(".parallax");
+  let x=(e.clientX/window.innerWidth -0.5)*10;
+  let y=(e.clientY/window.innerHeight -0.5)*10;
+  video.style.transform=`translate(${x}px,${y}px) scale(1.05)`;
+});
+
 </script>
 
 </body>
